# personal-diabetes-diary

./: CHANGELOG.md  LICENSE  README.md
pdd-bot/: .gitignore  Cargo.toml  build.rs
pdd-bot/scripts/: build-wsl.bat  build-wsl.sh
pdd-bot/src/: args.rs  main.rs  tgbot.rs
pdd-bot/src/install/: install_linux.rs  mod.rs
pdd-bot/systemd/: pdd.service
